# portapy

./: LICENSE  PARSER_UPSTREAM.json  README.md  RELEASE_STATUS.json  UPSTREAM.json  pyproject.toml
.github/: portapy-3.14-verification-trigger  verification-trigger-v6
docs/: CSHARP.md  DESIGN.md  FFI.md  NATIVE-STATUS.md
examples/: embed.c
include/: portapy.h  portapy_managed.h  portapy_traceback.h
native/: dict_glue.c  environment_api.c  environment_glue.c  host_call_glue.c  host_object_glue.c  list_glue.c  managed_environment_glue.c  text_error_glue.c  traceback_filename_stub.c  traceback_glue.c  tuple_glue.c
tests/: native_boolean_expression_host.c  native_closure_host.c  native_control_flow_host.c  native_dict_host.c  native_environment_adapter_probe.py  native_environment_api_host.c  native_expression_host.c  native_full_core_probe_host.c  native_full_environment_host.c  native_full_runtime_host.c  native_function_host.c  native_handle_host.c  native_host_call_host.c  native_host_object_host.c  native_import_host.c  native_kwargs_host.c  native_list_adapter_probe.py  native_list_host.c  native_managed_environment_host.c  native_probe_host.c  native_statement_host.c  native_text_error_host.c  native_traceback_adapter_probe.py  native_traceback_host.c  native_tuple_host.c  native_typed_literal_host.c  native_varargs_host.c  runtime_abi_host.c  test_build_native_host_calls.py  test_bytecode_native_compat.py  test_core_frontend_modes.py  test_elf_pic.py  test_environment_api.py  test_environment_portable_frontend.py  test_full_core_probe.py  (+114 more)
tools/: __init__.py  (+148 more)
(+77 files in other folders)
