[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portapy"
version = "3.14.0.dev0"
description = "Fully Python-built embeddable interpreter forked from pyinbin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pixelated Dream" }]

[project.optional-dependencies]
bootstrap = ["asmpython @ git+https://github.com/deltathedumb/asmpython.git@beta"]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
