[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portapy"
version = "3.14.0"
description = "Fully Python-built embeddable interpreter forked from pyinbin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pixelated Dream" }]

[project.optional-dependencies]
build = ["asmpython @ git+https://github.com/deltathedumb/asmpython.git@376cf9422c28123673a1dedd7dd66b845f3c5ed1"]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
